Use Java 11 and refactor